@@ -1,0 +1,48 @@
+stdout of test 'sequence-restart-with-null` in directory 'test/BugTracker-2010` itself:
+
+
+# 20:16:54 >  
+# 20:16:54 >   mserver5 "--config=/ufs/fabian/scratch/monetdb/current/program-x86_64/etc/monetdb5.conf" --debug=10 --set gdk_nr_threads=0 --set "monet_mod_path=/ufs/fabian/scratch/monetdb/current/program-x86_64/lib/monetdb5:/ufs/fabian/scratch/monetdb/current/program-x86_64/lib/monetdb5/lib:/ufs/fabian/scratch/monetdb/current/program-x86_64/lib/monetdb5/bin" --set "gdk_dbfarm=/net/volund.ins.cwi.nl/export/scratch0/fabian/vtmp/mtest-current-volund.ins.cwi.nl/sql/dbfarm"  --set mapi_open=true --set xrpc_open=true --set mapi_port=33129 --set xrpc_port=47994 --set monet_prompt= --trace --forcemito --set mal_listing=2  "--dbname=mTests_test_BugTracker-2010" --set mal_listing=0 ; echo ; echo Over..
+# 20:16:54 >  
+
+# MonetDB 5 server v11.0.0
+# Release current-hg
+# Serving database 'mTests_test_BugTracker-2010', using 2 threads
+# Compiled for x86_64-pc-linux-gnu/64bit with 64bit OIDs dynamically linked
+# Found 7.750 GiB available main-memory.
+# Copyright (c) 1993-July 2008 CWI.
+# Copyright (c) August 2008-2011 MonetDB B.V., all rights reserved
+# Visit http://monetdb.cwi.nl/ for further information
+# MonetDB/SQL module v11.0.0 loaded
+# MonetDB/GIS module v11.0.0 loaded
+
+Ready.
+# SQL catalog created, loading sql scripts once
+
+Over..
+
+# 20:20:11 >  
+# 20:20:11 >  mclient -lsql -ftest -i -e --host=volund --port=34184 
+# 20:20:11 >  
+
+#create sequence testseq_2648 as integer start with 1;
+#create table testtbl_2648 (id integer);
+#select next value for testseq_2648;
+% . # table_name
+% next_value_for_sys # name
+% bigint # type
+% 1 # length
+[ 1	]
+#alter sequence testseq_2648 restart with (select max(id) from testtbl_2648);
+#select next value for testseq_2648;
+% . # table_name
+% next_value_for_sys # name
+% bigint # type
+% 1 # length
+[ 2	]
+#drop table testtbl_2648;
+
+# 20:16:54 >  
+# 20:16:54 >  Done.
+# 20:16:54 >  
+
